interpreter/tony_parser.output
   0  $accept : %entry% $end

   1  program : func_def T_eof

   2  func_def : T_def header T_colon def multi_stmt T_end

   3  def :
   4      | func_def def
   5      | func_decl def
   6      | var_def def

   7  multi_stmt : stmt
   8             | stmt multi_stmt

   9  header : mytype T_var T_lbracket myformal T_rbracket

  10  mytype :
  11         | ttype

  12  myformal :
  13           | formal repformal

  14  repformal :
  15            | T_semicolon formal repformal

  16  formal : myref ttype T_var other_id

  17  myref :
  18        | T_ref

  19  other_id :
  20           | T_comma T_var other_id

  21  ttype : T_int
  22        | T_bool
  23        | T_char
  24        | ttype T_lsqbracket T_rsqbracket
  25        | T_list T_lsqbracket ttype T_rsqbracket

  26  func_decl : T_decl header

  27  var_def : ttype T_var other_id

  28  stmt : simple
  29       | T_exit
  30       | T_return expr
  31       | T_if expr T_colon multi_stmt elsif_stmt else_stmt T_end
  32       | T_for simple_list T_semicolon expr T_semicolon simple_list T_colon multi_stmt T_end

  33  elsif_stmt :
  34             | T_elsif expr T_colon multi_stmt elsif_stmt

  35  else_stmt :
  36            | T_else T_colon multi_stmt

  37  simple : T_skip
  38         | atom T_assign expr
  39         | call

  40  simple_list : simple other_simple

  41  other_simple :
  42               | T_comma simple other_simple

  43  call : T_var T_lbracket T_rbracket
  44       | T_var T_lbracket expr other_expr T_rbracket

  45  other_expr :
  46             | T_comma expr other_expr

  47  atom : T_var
  48       | T_string_const
  49       | atom T_lsqbracket expr T_rsqbracket
  50       | call

  51  expr : atom
  52       | T_int_const
  53       | T_char_const
  54       | T_lbracket expr T_rbracket
  55       | T_plus expr
  56       | T_minus expr
  57       | expr oper expr
  58       | expr lg_oper expr
  59       | T_true
  60       | T_false
  61       | T_not expr
  62       | expr T_and expr
  63       | expr T_or expr
  64       | T_new ttype T_lsqbracket expr T_rsqbracket
  65       | T_nil
  66       | T_is_nil T_lbracket expr T_rbracket
  67       | expr T_cons expr
  68       | T_head T_lbracket expr T_rbracket
  69       | T_tail T_lbracket expr T_rbracket

  70  oper : T_plus
  71       | T_minus
  72       | T_times
  73       | T_div
  74       | T_mod

  75  lg_oper : T_eq
  76          | T_dif
  77          | T_less
  78          | T_greater
  79          | T_less_eq
  80          | T_greater_eq

  81  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (81)

	T_def  shift 3
	.  error

	program  goto 4
	func_def  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	func_def : T_def . header T_colon def multi_stmt T_end  (2)
	mytype : .  (10)

	T_bool  shift 6
	T_char  shift 7
	T_int  shift 8
	T_list  shift 9
	T_var  reduce 10

	header  goto 10
	mytype  goto 11
	ttype  goto 12


state 4
	%entry% : '\001' program .  (81)

	.  reduce 81


state 5
	program : func_def . T_eof  (1)

	T_eof  shift 13
	.  error


state 6
	ttype : T_bool .  (22)

	.  reduce 22


state 7
	ttype : T_char .  (23)

	.  reduce 23


state 8
	ttype : T_int .  (21)

	.  reduce 21


state 9
	ttype : T_list . T_lsqbracket ttype T_rsqbracket  (25)

	T_lsqbracket  shift 14
	.  error


state 10
	func_def : T_def header . T_colon def multi_stmt T_end  (2)

	T_colon  shift 15
	.  error


state 11
	header : mytype . T_var T_lbracket myformal T_rbracket  (9)

	T_var  shift 16
	.  error


state 12
	mytype : ttype .  (11)
	ttype : ttype . T_lsqbracket T_rsqbracket  (24)

	T_lsqbracket  shift 17
	T_var  reduce 11


state 13
	program : func_def T_eof .  (1)

	.  reduce 1


state 14
	ttype : T_list T_lsqbracket . ttype T_rsqbracket  (25)

	T_bool  shift 6
	T_char  shift 7
	T_int  shift 8
	T_list  shift 9
	.  error

	ttype  goto 18


state 15
	func_def : T_def header T_colon . def multi_stmt T_end  (2)
	def : .  (3)

	T_bool  shift 6
	T_char  shift 7
	T_decl  shift 19
	T_def  shift 3
	T_int  shift 8
	T_list  shift 9
	T_exit  reduce 3
	T_for  reduce 3
	T_if  reduce 3
	T_return  reduce 3
	T_skip  reduce 3
	T_var  reduce 3
	T_string_const  reduce 3

	func_def  goto 20
	def  goto 21
	ttype  goto 22
	func_decl  goto 23
	var_def  goto 24


state 16
	header : mytype T_var . T_lbracket myformal T_rbracket  (9)

	T_lbracket  shift 25
	.  error


state 17
	ttype : ttype T_lsqbracket . T_rsqbracket  (24)

	T_rsqbracket  shift 26
	.  error


state 18
	ttype : ttype . T_lsqbracket T_rsqbracket  (24)
	ttype : T_list T_lsqbracket ttype . T_rsqbracket  (25)

	T_lsqbracket  shift 17
	T_rsqbracket  shift 27
	.  error


state 19
	func_decl : T_decl . header  (26)
	mytype : .  (10)

	T_bool  shift 6
	T_char  shift 7
	T_int  shift 8
	T_list  shift 9
	T_var  reduce 10

	header  goto 28
	mytype  goto 11
	ttype  goto 12


state 20
	def : func_def . def  (4)
	def : .  (3)

	T_bool  shift 6
	T_char  shift 7
	T_decl  shift 19
	T_def  shift 3
	T_int  shift 8
	T_list  shift 9
	T_exit  reduce 3
	T_for  reduce 3
	T_if  reduce 3
	T_return  reduce 3
	T_skip  reduce 3
	T_var  reduce 3
	T_string_const  reduce 3

	func_def  goto 20
	def  goto 29
	ttype  goto 22
	func_decl  goto 23
	var_def  goto 24


state 21
	func_def : T_def header T_colon def . multi_stmt T_end  (2)

	T_exit  shift 30
	T_for  shift 31
	T_if  shift 32
	T_return  shift 33
	T_skip  shift 34
	T_var  shift 35
	T_string_const  shift 36
	.  error

	multi_stmt  goto 37
	stmt  goto 38
	simple  goto 39
	call  goto 40
	atom  goto 41


state 22
	ttype : ttype . T_lsqbracket T_rsqbracket  (24)
	var_def : ttype . T_var other_id  (27)

	T_var  shift 42
	T_lsqbracket  shift 17
	.  error


state 23
	def : func_decl . def  (5)
	def : .  (3)

	T_bool  shift 6
	T_char  shift 7
	T_decl  shift 19
	T_def  shift 3
	T_int  shift 8
	T_list  shift 9
	T_exit  reduce 3
	T_for  reduce 3
	T_if  reduce 3
	T_return  reduce 3
	T_skip  reduce 3
	T_var  reduce 3
	T_string_const  reduce 3

	func_def  goto 20
	def  goto 43
	ttype  goto 22
	func_decl  goto 23
	var_def  goto 24


state 24
	def : var_def . def  (6)
	def : .  (3)

	T_bool  shift 6
	T_char  shift 7
	T_decl  shift 19
	T_def  shift 3
	T_int  shift 8
	T_list  shift 9
	T_exit  reduce 3
	T_for  reduce 3
	T_if  reduce 3
	T_return  reduce 3
	T_skip  reduce 3
	T_var  reduce 3
	T_string_const  reduce 3

	func_def  goto 20
	def  goto 44
	ttype  goto 22
	func_decl  goto 23
	var_def  goto 24


state 25
	header : mytype T_var T_lbracket . myformal T_rbracket  (9)
	myformal : .  (12)
	myref : .  (17)

	T_ref  shift 45
	T_bool  reduce 17
	T_char  reduce 17
	T_int  reduce 17
	T_list  reduce 17
	T_rbracket  reduce 12

	myformal  goto 46
	formal  goto 47
	myref  goto 48


state 26
	ttype : ttype T_lsqbracket T_rsqbracket .  (24)

	.  reduce 24


state 27
	ttype : T_list T_lsqbracket ttype T_rsqbracket .  (25)

	.  reduce 25


state 28
	func_decl : T_decl header .  (26)

	.  reduce 26


state 29
	def : func_def def .  (4)

	.  reduce 4


state 30
	stmt : T_exit .  (29)

	.  reduce 29


state 31
	stmt : T_for . simple_list T_semicolon expr T_semicolon simple_list T_colon multi_stmt T_end  (32)

	T_skip  shift 34
	T_var  shift 35
	T_string_const  shift 36
	.  error

	simple  goto 49
	simple_list  goto 50
	call  goto 40
	atom  goto 41


state 32
	stmt : T_if . expr T_colon multi_stmt elsif_stmt else_stmt T_end  (31)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 66


state 33
	stmt : T_return . expr  (30)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 67


state 34
	simple : T_skip .  (37)

	.  reduce 37


state 35
	call : T_var . T_lbracket T_rbracket  (43)
	call : T_var . T_lbracket expr other_expr T_rbracket  (44)
	atom : T_var .  (47)

	T_lbracket  shift 68
	T_and  reduce 47
	T_else  reduce 47
	T_elsif  reduce 47
	T_end  reduce 47
	T_exit  reduce 47
	T_for  reduce 47
	T_if  reduce 47
	T_mod  reduce 47
	T_or  reduce 47
	T_return  reduce 47
	T_skip  reduce 47
	T_var  reduce 47
	T_string_const  reduce 47
	T_eq  reduce 47
	T_minus  reduce 47
	T_plus  reduce 47
	T_times  reduce 47
	T_div  reduce 47
	T_cons  reduce 47
	T_dif  reduce 47
	T_less  reduce 47
	T_greater  reduce 47
	T_less_eq  reduce 47
	T_greater_eq  reduce 47
	T_rbracket  reduce 47
	T_assign  reduce 47
	T_lsqbracket  reduce 47
	T_rsqbracket  reduce 47
	T_colon  reduce 47
	T_semicolon  reduce 47
	T_comma  reduce 47


state 36
	atom : T_string_const .  (48)

	.  reduce 48


state 37
	func_def : T_def header T_colon def multi_stmt . T_end  (2)

	T_end  shift 69
	.  error


state 38
	multi_stmt : stmt .  (7)
	multi_stmt : stmt . multi_stmt  (8)

	T_exit  shift 30
	T_for  shift 31
	T_if  shift 32
	T_return  shift 33
	T_skip  shift 34
	T_var  shift 35
	T_string_const  shift 36
	T_else  reduce 7
	T_elsif  reduce 7
	T_end  reduce 7

	multi_stmt  goto 70
	stmt  goto 38
	simple  goto 39
	call  goto 40
	atom  goto 41


state 39
	stmt : simple .  (28)

	.  reduce 28


state 40
	simple : call .  (39)
	atom : call .  (50)

	T_else  reduce 39
	T_elsif  reduce 39
	T_end  reduce 39
	T_exit  reduce 39
	T_for  reduce 39
	T_if  reduce 39
	T_return  reduce 39
	T_skip  reduce 39
	T_var  reduce 39
	T_string_const  reduce 39
	T_assign  reduce 50
	T_lsqbracket  reduce 50
	T_colon  reduce 39
	T_semicolon  reduce 39
	T_comma  reduce 39


state 41
	simple : atom . T_assign expr  (38)
	atom : atom . T_lsqbracket expr T_rsqbracket  (49)

	T_assign  shift 71
	T_lsqbracket  shift 72
	.  error


state 42
	var_def : ttype T_var . other_id  (27)
	other_id : .  (19)

	T_comma  shift 73
	T_bool  reduce 19
	T_char  reduce 19
	T_decl  reduce 19
	T_def  reduce 19
	T_exit  reduce 19
	T_for  reduce 19
	T_if  reduce 19
	T_int  reduce 19
	T_list  reduce 19
	T_return  reduce 19
	T_skip  reduce 19
	T_var  reduce 19
	T_string_const  reduce 19

	other_id  goto 74


state 43
	def : func_decl def .  (5)

	.  reduce 5


state 44
	def : var_def def .  (6)

	.  reduce 6


state 45
	myref : T_ref .  (18)

	.  reduce 18


state 46
	header : mytype T_var T_lbracket myformal . T_rbracket  (9)

	T_rbracket  shift 75
	.  error


state 47
	myformal : formal . repformal  (13)
	repformal : .  (14)

	T_semicolon  shift 76
	T_rbracket  reduce 14

	repformal  goto 77


state 48
	formal : myref . ttype T_var other_id  (16)

	T_bool  shift 6
	T_char  shift 7
	T_int  shift 8
	T_list  shift 9
	.  error

	ttype  goto 78


state 49
	simple_list : simple . other_simple  (40)
	other_simple : .  (41)

	T_comma  shift 79
	T_colon  reduce 41
	T_semicolon  reduce 41

	other_simple  goto 80


state 50
	stmt : T_for simple_list . T_semicolon expr T_semicolon simple_list T_colon multi_stmt T_end  (32)

	T_semicolon  shift 81
	.  error


state 51
	expr : T_false .  (60)

	.  reduce 60


state 52
	expr : T_head . T_lbracket expr T_rbracket  (68)

	T_lbracket  shift 82
	.  error


state 53
	expr : T_new . ttype T_lsqbracket expr T_rsqbracket  (64)

	T_bool  shift 6
	T_char  shift 7
	T_int  shift 8
	T_list  shift 9
	.  error

	ttype  goto 83


state 54
	expr : T_nil .  (65)

	.  reduce 65


state 55
	expr : T_is_nil . T_lbracket expr T_rbracket  (66)

	T_lbracket  shift 84
	.  error


state 56
	expr : T_not . expr  (61)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 85


state 57
	expr : T_tail . T_lbracket expr T_rbracket  (69)

	T_lbracket  shift 86
	.  error


state 58
	expr : T_true .  (59)

	.  reduce 59


state 59
	expr : T_int_const .  (52)

	.  reduce 52


state 60
	expr : T_char_const .  (53)

	.  reduce 53


state 61
	expr : T_minus . expr  (56)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 87


state 62
	expr : T_plus . expr  (55)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 88


state 63
	expr : T_lbracket . expr T_rbracket  (54)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 89


state 64
	atom : call .  (50)

	.  reduce 50


state 65
	atom : atom . T_lsqbracket expr T_rsqbracket  (49)
	expr : atom .  (51)

	T_lsqbracket  shift 72
	T_and  reduce 51
	T_else  reduce 51
	T_elsif  reduce 51
	T_end  reduce 51
	T_exit  reduce 51
	T_for  reduce 51
	T_if  reduce 51
	T_mod  reduce 51
	T_or  reduce 51
	T_return  reduce 51
	T_skip  reduce 51
	T_var  reduce 51
	T_string_const  reduce 51
	T_eq  reduce 51
	T_minus  reduce 51
	T_plus  reduce 51
	T_times  reduce 51
	T_div  reduce 51
	T_cons  reduce 51
	T_dif  reduce 51
	T_less  reduce 51
	T_greater  reduce 51
	T_less_eq  reduce 51
	T_greater_eq  reduce 51
	T_rbracket  reduce 51
	T_rsqbracket  reduce 51
	T_colon  reduce 51
	T_semicolon  reduce 51
	T_comma  reduce 51


state 66
	stmt : T_if expr . T_colon multi_stmt elsif_stmt else_stmt T_end  (31)
	expr : expr . oper expr  (57)
	expr : expr . lg_oper expr  (58)
	expr : expr . T_and expr  (62)
	expr : expr . T_or expr  (63)
	expr : expr . T_cons expr  (67)

	T_and  shift 90
	T_mod  shift 91
	T_or  shift 92
	T_eq  shift 93
	T_minus  shift 94
	T_plus  shift 95
	T_times  shift 96
	T_div  shift 97
	T_cons  shift 98
	T_dif  shift 99
	T_less  shift 100
	T_greater  shift 101
	T_less_eq  shift 102
	T_greater_eq  shift 103
	T_colon  shift 104
	.  error

	oper  goto 105
	lg_oper  goto 106


state 67
	stmt : T_return expr .  (30)
	expr : expr . oper expr  (57)
	expr : expr . lg_oper expr  (58)
	expr : expr . T_and expr  (62)
	expr : expr . T_or expr  (63)
	expr : expr . T_cons expr  (67)

	T_and  shift 90
	T_mod  shift 91
	T_or  shift 92
	T_eq  shift 93
	T_minus  shift 94
	T_plus  shift 95
	T_times  shift 96
	T_div  shift 97
	T_cons  shift 98
	T_dif  shift 99
	T_less  shift 100
	T_greater  shift 101
	T_less_eq  shift 102
	T_greater_eq  shift 103
	T_else  reduce 30
	T_elsif  reduce 30
	T_end  reduce 30
	T_exit  reduce 30
	T_for  reduce 30
	T_if  reduce 30
	T_return  reduce 30
	T_skip  reduce 30
	T_var  reduce 30
	T_string_const  reduce 30

	oper  goto 105
	lg_oper  goto 106


state 68
	call : T_var T_lbracket . T_rbracket  (43)
	call : T_var T_lbracket . expr other_expr T_rbracket  (44)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	T_rbracket  shift 107
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 108


state 69
	func_def : T_def header T_colon def multi_stmt T_end .  (2)

	.  reduce 2


state 70
	multi_stmt : stmt multi_stmt .  (8)

	.  reduce 8


state 71
	simple : atom T_assign . expr  (38)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 109


state 72
	atom : atom T_lsqbracket . expr T_rsqbracket  (49)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 110


state 73
	other_id : T_comma . T_var other_id  (20)

	T_var  shift 111
	.  error


state 74
	var_def : ttype T_var other_id .  (27)

	.  reduce 27


state 75
	header : mytype T_var T_lbracket myformal T_rbracket .  (9)

	.  reduce 9


state 76
	repformal : T_semicolon . formal repformal  (15)
	myref : .  (17)

	T_ref  shift 45
	T_bool  reduce 17
	T_char  reduce 17
	T_int  reduce 17
	T_list  reduce 17

	formal  goto 112
	myref  goto 48


state 77
	myformal : formal repformal .  (13)

	.  reduce 13


state 78
	formal : myref ttype . T_var other_id  (16)
	ttype : ttype . T_lsqbracket T_rsqbracket  (24)

	T_var  shift 113
	T_lsqbracket  shift 17
	.  error


state 79
	other_simple : T_comma . simple other_simple  (42)

	T_skip  shift 34
	T_var  shift 35
	T_string_const  shift 36
	.  error

	simple  goto 114
	call  goto 40
	atom  goto 41


state 80
	simple_list : simple other_simple .  (40)

	.  reduce 40


state 81
	stmt : T_for simple_list T_semicolon . expr T_semicolon simple_list T_colon multi_stmt T_end  (32)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 115


state 82
	expr : T_head T_lbracket . expr T_rbracket  (68)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 116


state 83
	ttype : ttype . T_lsqbracket T_rsqbracket  (24)
	expr : T_new ttype . T_lsqbracket expr T_rsqbracket  (64)

	T_lsqbracket  shift 117
	.  error


state 84
	expr : T_is_nil T_lbracket . expr T_rbracket  (66)

	T_false  shift 51
	T_head  shift 52
	T_new  shift 53
	T_nil  shift 54
	T_is_nil  shift 55
	T_not  shift 56
	T_tail  shift 57
	T_true  shift 58
	T_var  shift 35
	T_int_const  shift 59
	T_char_const  shift 60
	T_string_const  shift 36
	T_minus  shift 61
	T_plus  shift 62
	T_lbracket  shift 63
	.  error

	call  goto 64
	atom  goto 65
	expr  goto 118


state 85
	expr : expr . oper expr  (57)
	expr : expr . lg_oper expr  (58)
	expr : T_not expr .  (61)
	expr : expr . T_and expr  (62)
	expr : expr . T_or expr  (63)
	expr : expr . T_cons expr  (67)
